<resources>
    <string name="app_name">Zing Mp3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--if you want rtl change value of isRTL to true else false-->
    <string name="isRTL">false</string>

    <string name="tab_text_1">Bài hát</string>
    <string name="tab_text_2">Playlist</string>
    <string name="tab_text_3">Nghệ sĩ</string>
    <string name="tab_text_4">Album</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_line">Phát bài hát yêu thích của bạn</string>
    <string name="image_content">image</string>
    <string name="home">Trang chủ</string>
    <string name="artist">Nghệ sĩ</string>
    <string name="genre">Thể loại</string>
    <string name="albums">Album</string>
    <string name="playlist">Playlist</string>
    <string name="favourite">Yêu thích</string>
    <string name="settings">Cài đặt</string>
    <string name="err_no_artist_found">Không tìm thấy nghệ sĩ nào</string>
    <string name="err_internet_not_conn">Không có kết nối</string>
    <string name="refresh">Tải lại</string>
    <string name="see_all">Xem tất cả</string>
    <string name="search">Search</string>
    <string name="err_server">Không thể kết nối đến server</string>
    <string name="recent">Gần đây</string>
    <string name="chart">BXH</string>
    <string name="categories">Categories</string>
    <string name="latest">Mới nhất</string>
    <string name="exit">Thoát ứng dụng</string>
    <string name="sure_exit">Bạn có chắc chắc muốn thoát?</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="confirm">Đồng ý</string>
    <string name="recently_played">Recently Played</string>
    <string name="err_no_songs_found">No Songs Found</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_no_cat_found">No Categories Found</string>
    <string name="dashboard">Dashboard</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Thông báo</string>
    <string name="moreapp">More Apps</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="err_no_songs_selected">Không có bài hát nào được lựa chọn</string>
    <string name="close">Close</string>
    <string name="rating">Rating</string>
    <string name="share_song">Share Song</string>
    <string name="listening">I am listening</string>
    <string name="err_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="rate_song">Thank you for rating</string>
    <string name="submit">Submit</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="volume">Volume</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="err_no_playlist_found">No Playlist Found</string>
    <string name="downloading">Downloading</string>
    <string name="already_download">Already Downloaded</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="retry">Thử lại</string>
    <string name="err_no_albums_found">Không tìm thấy Albums nào</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="select_rating">Select Rating</string>
    <string name="loading">Đang tải..</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="file_deleted">File Deleted</string>
    <string name="sure_delete">Are you sure you want to delete this song?</string>
    <string name="sure_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="remove_from_playlist">Removed from playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="remove_playlist">Playlist removed</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="add">THÊM</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="songs">Bài hát</string>
    <string name="title_activity_main2">MusicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title">Title</string>
    <string name="music_library">Music Library</string>
    <string name="local_songs">Local Songs</string>
    <string name="add_songs">Thêm bài hát</string>
    <string name="selected">Selected</string>
    <string name="select_song">Please select song</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="trending_songs">Thịnh hành</string>
    <string name="all_songs">Tất cả bài hát</string>
    <string name="banner">Banner</string>
    <string name="downloads">Tải xuống</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="setas">SetAs</string>

    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_ringnotification">Notification Ringtone</string>
    <string name="set_ringalarm">Alarm Ringtone</string>
    <string name="set_as_noti">Set As Notificaiton tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="noti_set">Notification tone set</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="search_youtube">Search Youtube</string>
    <string name="off_add_qeue_alert">Current song list will be remove from the queue</string>
    <string name="no_songs_to_add_queue">No songs available to add to queue</string>
    <string name="queue_updated">Queue Updated</string>
    <string name="rate_song2">Rate this Song</string>
    <string name="err_playing_song">Error Playling Song</string>
    <string name="youtube_not_installed">Youtube app is not installed</string>
    <string name="downloaded">Downloaded</string>

    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Nhớ tài khoản</string>
    <string name="registering">Đang đăng ký..</string>
    <string name="wrong_username_or_password">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="forgot_password_message">Nhập địa chỉ email hợp lệ của bạn vào bên dưới và chúng tôi sẽ gửi cho bạn email kèm theo hướng dẫn về cách thay đổi mật khẩu của bạn</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="skip">Để sau</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="dnt_have_acc">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="cannot_empty">Trường không được bỏ trống</string>
    <string name="login_not_success">Login not successful</string>
    <string name="email_pass_nomatch">Email and password not matched</string>
    <string name="pass_end_space">Vui lòng không nhập dấu cách ở cuối</string>
    <string name="name">Họ tên</string>
    <string name="enter_phone">Vui lòng nhập số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="already_acc">Bạn đã có tài khoản?</string>
    <string name="phone">Điện thoại</string>
    <string name="enter_name">Vui lòng nhập tên</string>
    <string name="enter_email">Vui lòng nhập Email</string>
    <string name="enter_password">Vui lòng nhập mật khẩu</string>
    <string name="enter_cpassword">Vui lòng nhập xác nhận mật khẩu</string>
    <string name="pass_nomatch">Mật khẩu không khớp</string>
    <string name="not_log">Not Logged In</string>
    <string name="profile">Hồ sơ</string>
    <string name="edit_profile">Sửa hồ sơ</string>
    <string name="update">Cập nhật</string>
    <string name="min">min</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="invalid_user">Invalid User</string>
    <string name="update_prof_succ">Profile Updated Successfully</string>
    <string name="image">Ảnh</string>
    <string name="error_password_sort">Mật khẩu quá ngắn</string>
    <string name="error_invalid_username">Tên đăng nhập không hợp lệ</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="send">Gửi</string>
    <string name="report_song_">Report Song :-</string>
    <string name="report_message">Enter your report here</string>
    <string name="report">Report</string>
    <string name="suggest_song">Suggest Song</string>
    <string name="song_title">Song Title</string>
    <string name="song_desc">Song Description</string>
    <string name="select_image">Select Image</string>
    <string name="enter_report">Enter your report message</string>
    <string name="upload_success">Upload Successful</string>
    <string name="ok">OK</string>
    <string name="enter_song_title">Enter Song Title</string>
    <string name="enter_song_desc">Enter Song Description</string>
    <string name="select_song_image">Select Song Image</string>
    <string name="report_song">Report Song</string>
    <string name="title_">Title:-</string>
    <string name="description_">Description:-</string>
    <string name="image_">Image:-</string>
    <string name="search_songs">Search Songs</string>
    <string name="search_artist">Search Artist</string>
    <string name="search_albums">Search Albums</string>
    <string name="download">Download</string>
    <string name="view_all_songs">Xem Tất Cả</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Thử lại</string>
    <string name="username">Tên đăng nhập</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>