<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo1"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_below="@id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/first_name"
                    android:textSize="12sp"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"/>

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/last_name"
                    android:textSize="12sp"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:padding="10dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/llName"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:hint="@string/username"
                android:padding="10dp"
                android:textSize="12sp"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="12sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="12sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="12sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="12sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btRegister"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etPhone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#e1e4eb"
                android:text="@string/register"
                android:textColor="@color/main_color"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btRegister"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_acc"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvLoginNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>