<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/main_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo1"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLogo"
                android:layout_centerHorizontal="true"
                android:text="@string/forgot_pass"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvForgotPasswordDescription"
                android:layout_below="@id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="#f2f2f2"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:text="@string/forgot_password_message"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/tvForgotPasswordDescription"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:padding="10dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btSend"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@id/etEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/send"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:background="#e1e4eb"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>