<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/main_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/logo1"
                android:contentDescription="@string/image"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/ivLogo"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/etUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/llRemember"
                android:layout_below="@id/etPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/llRemember"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="#e1e4eb"
                    android:text="@string/login"
                    android:textColor="@color/main_color"
                    android:textSize="12sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btSkip"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:background="#e1e4eb"
                    android:text="@string/skip"
                    android:textColor="@color/main_color"
                    android:textSize="12sp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="100dp"
                android:layout_below="@id/llButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>